# sims4browser

./: .gitignore  AGENT.md  Directory.Build.props  README.md  Sims4ResourceExplorer.sln  profile-live-indexing.ps1  run.ps1
docs/: README.md  architecture.md  knowledge-map.md  known-limitations.md  risk-log.md  sample-data-strategy.md  shared-ts4-material-texture-pipeline.md  sim-body-shell-contract.md  sim-domain-roadmap.md  supported-types.md  third-party-licenses.md
docs/adr/: 0001-solution-architecture.md  0002-dependency-selection.md
docs/operations/: chat-handoff.md  multi-agent-workflow.md  tooling.md
docs/planning/: big-plan.md  current-plan.md  technical-debt.md  unknowns-and-non-goals.md
docs/references/: README.md
docs/workflows/: README.md  body-head-rig-seam.md  bond-morph-pipeline-plan.md  canonical-baseline-bodies.md  export-buildbuy-object.md  export-cas-asset.md  export-raw-resource.md  face-cas-bodytype-audit.md  head-part-selection-rule.md  nude-body-from-mods.md  nude-body-shell-discovery.md  open-game-and-mods.md  v12-skintone-format.md  visual-verification-findings-build0238.md
junk/: README.md
licenses/: README.md
satellites/ts4-dx11-introspection/: .gitignore  README.md  Run Live Capture.cmd  TS4.DX11.Introspection.sln
satellites/ts4-dx11-introspection/native/: CMakeLists.txt  README.md  d3d11.def
satellites/ts4-dx11-introspection/native/include/: Hooks.hpp  Logger.hpp  Reflection.hpp
satellites/ts4-dx11-introspection/native/src/: Hooks.cpp  Logger.cpp  ProxyD3D11.cpp  Reflection.cpp
ts4-wiki/: README.md
(+291 files in other folders)
